--- a/website/src/content/advanced/mcp.mdx
+++ b/website/src/content/advanced/mcp.mdx
@@ -99,13 +99,20 @@ An example of MCP config servers is as follows
 ```typescript
 import { Agent } from "alith";
 
-const agent = new Agent({
-  model: "gpt-4",
-  preamble:
-    "You are a calculator here to help the user perform arithmetic operations. Use the tools provided to answer the user question.",
-  mcpConfigPath: "servers_config.json",
-});
-console.log(await agent.prompt("Calculate 10 - 3"));
+async function main() {
+  const agent = new Agent({
+    model: "gpt-4",
+    preamble:
+      "You are a calculator here to help the user perform arithmetic operations. Use the tools provided to answer the user question.",
+    mcpConfigPath: "servers_config.json",
+  });
+
+  const response = await agent.prompt("Calculate 10 - 3");
+  console.log(response);
+}
+
+main().catch(console.error);
+
 ```
 
 An example of MCP config servers is as follows
