--- a/website/src/content/advanced/rag.mdx
+++ b/website/src/content/advanced/rag.mdx
@@ -116,21 +116,29 @@ print(
 ```typescript
 import { Agent, Store, QdrantStore, RemoteModelEmbeddings } from "alith";
 
-const store: Store = new QdrantStore(
-  new RemoteModelEmbeddings(
-    "your embeddings model name",
-    "your API key",
-    "base url",
-  ),
-);
-await store.save("Hello, World");
-const agent = new Agent({
-  model: "gpt-4",
-  preamble:
-    "You are a comedian here to entertain the user using humour and jokes.",
-  store,
-});
-console.log(await agent.prompt("Entertain me!"));
+async function main() {
+  const store: Store = new QdrantStore(
+    new RemoteModelEmbeddings(
+      "your embeddings model name",
+      "your API key",
+      "base url"
+    )
+  );
+
+  await store.save("Hello, World");
+
+  const agent = new Agent({
+    model: "gpt-4",
+    preamble: "You are a comedian here to entertain the user using humour and jokes.",
+    store,
+  });
+
+  const response = await agent.prompt("Entertain me!");
+  console.log(response);
+}
+
+main().catch(console.error);
+
 ```
 
 </Tabs.Tab>
