--- a/website/src/content/features/memory.mdx
+++ b/website/src/content/features/memory.mdx
@@ -54,12 +54,17 @@ print(agent.prompt("Entertain me again!"))
 ```typescript
 import { Agent, WindowBufferMemory } from "alith";
 
-const agent = new Agent({
-  model: "gpt-4",
-  memory: new WindowBufferMemory(),
-});
-console.log(await agent.prompt("Calculate 10 - 3"));
-console.log(await agent.prompt("Calculate 10 - 3 again"));
+async function main() {
+  const agent = new Agent({
+    model: "gpt-4",
+    memory: new WindowBufferMemory(),
+  });
+
+  console.log(await agent.prompt("Calculate 10 - 3"));
+  console.log(await agent.prompt("Calculate 10 - 3 again"));
+}
+
+main().catch(console.error);
 ```
 
 </Tabs.Tab>
