--- a/website/src/content/get-started.mdx
+++ b/website/src/content/get-started.mdx
@@ -151,12 +151,18 @@ npm i --save-dev @types/json-schema
 ```typescript
 import { Agent } from "alith";
 
-const agent = new Agent({
-  model: "gpt-4",
-  preamble:
-    "You are a comedian here to entertain the user using humour and jokes.",
-});
-console.log(await agent.prompt("Entertain me!"));
+async function main() {
+  const agent = new Agent({
+    model: "gpt-4",
+    preamble: "You are a comedian here to entertain the user using humour and jokes.",
+  });
+
+  const response = await agent.prompt("Entertain me!");
+  console.log(response);
+}
+
+main();
+
 ```
 
 ## Model Provider Settings
