Update documentation for Alith SDKs: refine JavaScript and Rust SDK sections, clarify resource links, and standardize example links. Adjust Python SDK documentation to ensure consistent example references.

--- a/website/src/content/alith/js/index.mdx
+++ b/website/src/content/alith/js/index.mdx
@@ -1,17 +1,10 @@
 # Alith JavaScript SDK
 
-## 📚 Documentation Coming Soon!
+## Documentation
 
-The Alith JavaScript SDK is **already built and available** - we're just working on comprehensive documentation to help you get started.
+Documentation for the JavaScript SDK is not yet created and is currently in progress.
 
-### Get Started Now
+## Resources
 
-While we work on the docs, you can:
-
-- **Install**: `npm install alith`
-- **GitHub**: [alith-ai/alith](https://github.com/alith-ai/alith) - Check the examples
-- **Discord**: [Join our community](https://discord.gg/alith) - Get help from the community
-
----
-
-**Need help?** Check out our [Python SDK](./python/) documentation or join our Discord community! 
+- **GitHub**: [0xLazAI/alith](https://github.com/0xLazAI/alith)
+- **Telegram**: [Join our community](https://t.me/alithai) 
