--- a/website/src/content/alith/python/api-reference.mdx
+++ b/website/src/content/alith/python/api-reference.mdx
@@ -798,4 +798,4 @@ file_id = client.add_file("https://example.com/data.json")
 headers = client.get_request_headers(node="0xnode...", file_id=file_id)
 ```
 
-This API reference provides comprehensive documentation for all Alith Python SDK components. For more examples and advanced usage, see the [Examples](../examples/) section.
+This API reference provides comprehensive documentation for all Alith Python SDK components. For more examples and advanced usage, see the [Examples](./examples/) section.
