--- a/website/src/content/alith/python/embeddings.mdx
+++ b/website/src/content/alith/python/embeddings.mdx
@@ -571,4 +571,4 @@ Now that you understand embeddings, explore:
 - **[Vector Stores & RAG](./store.mdx)** - Building knowledge bases
 - **[Custom Tools](./tools.mdx)** - Extending agent capabilities
 - **[Blockchain Integration](./lazai.mdx)** - Web3 features
-- **[Examples](../examples/)** - Real-world implementations
+- **[Examples](./examples/)** - Real-world implementations
