--- a/website/src/content/alith/python/getting-started.mdx
+++ b/website/src/content/alith/python/getting-started.mdx
@@ -226,7 +226,7 @@ Now that you have a basic understanding, explore these advanced topics:
 - **[Vector Stores](./store.mdx)** - Building knowledge bases
 - **[Custom Tools](./tools.mdx)** - Creating powerful extensions
 - **[Blockchain Integration](./lazai.mdx)** - Web3 capabilities
-- **[Examples](../examples/)** - Real-world applications
+- **[Examples](./examples/)** - Real-world applications
 
 </Steps>
 
@@ -328,7 +328,10 @@ Now that you have a basic understanding, explore these advanced topics:
 
 ## Getting Help
 
-- **GitHub Issues**: [Report bugs and feature requests](https://github.com/alith-ai/alith/issues)
-- **Discord Community**: [Get help from the community](https://discord.gg/alith)
-- **Documentation**: [Comprehensive API reference](./api-reference.mdx)
-- **Examples**: [See real-world implementations](../examples/)
+- **Website**: [lazai.network/alith](https://lazai.network/alith)
+- **Documentation**: [alith.lazai.network/docs](https://alith.lazai.network/docs)
+- **GitHub**: [0xLazAI/alith](https://github.com/0xLazAI/alith)
+- **X/Twitter**: [@0xalith](https://x.com/0xalith)
+- **Telegram**: [Join our community](https://t.me/alithai)
+- **API Reference**: [Comprehensive API reference](./api-reference.mdx)
+- **Examples**: [See real-world implementations](./examples/)
