--- a/website/src/content/alith/python/lazai.mdx
+++ b/website/src/content/alith/python/lazai.mdx
@@ -788,5 +788,5 @@ class PrivacyPreservingService:
 Now that you understand blockchain integration, explore:
 
 - **[Advanced Features](./advanced.mdx)** - TEE, training, and optimization
-- **[Examples](../examples/)** - Real-world implementations
+- **[Examples](./examples/)** - Real-world implementations
 - **[API Reference](./api-reference.mdx)** - Complete API documentation
