--- a/website/src/content/alith/python/store.mdx
+++ b/website/src/content/alith/python/store.mdx
@@ -843,4 +843,4 @@ Now that you understand vector stores and RAG, explore:
 - **[Custom Tools](./tools.mdx)** - Extending agent capabilities
 - **[Blockchain Integration](./lazai.mdx)** - Web3 features
 - **[Advanced Features](./advanced.mdx)** - TEE, training, and optimization
-- **[Examples](../examples/)** - Real-world implementations
+- **[Examples](./examples/)** - Real-world implementations
