--- a/website/src/content/alith/python/tools.mdx
+++ b/website/src/content/alith/python/tools.mdx
@@ -943,4 +943,4 @@ Now that you understand custom tools, explore:
 
 - **[Blockchain Integration](./lazai.mdx)** - Web3 capabilities
 - **[Advanced Features](./advanced.mdx)** - TEE, training, and optimization
-- **[Examples](../examples/)** - Real-world implementations
+- **[Examples](./examples/)** - Real-world implementations
