--- a/website/src/content/alith/python/agent.mdx
+++ b/website/src/content/alith/python/agent.mdx
@@ -600,4 +600,4 @@ Now that you understand agent configuration, explore:
 - **[Vector Stores](./store.mdx)** - Building knowledge bases  
 - **[Custom Tools](./tools.mdx)** - Extending agent capabilities
 - **[Blockchain Integration](./lazai.mdx)** - Web3 features
-- **[Examples](../examples/)** - Real-world implementations
+- **[Examples](./examples/)** - Real-world implementations
