--- a/website/src/content/alith/python/memory.mdx
+++ b/website/src/content/alith/python/memory.mdx
@@ -291,4 +291,4 @@ Now that you understand memory management, explore:
 - **[Vector Stores](./store.mdx)** - Building knowledge bases
 - **[Custom Tools](./tools.mdx)** - Extending agent capabilities  
 - **[Blockchain Integration](./lazai.mdx)** - Web3 features
-- **[Examples](../examples/)** - Real-world implementations
+- **[Examples](./examples/)** - Real-world implementations
