--- a/website/src/content/alith/rust/index.mdx
+++ b/website/src/content/alith/rust/index.mdx
@@ -1,17 +1,10 @@
 # Alith Rust SDK
 
-## 📚 Documentation Coming Soon!
+## Documentation
 
-The Alith Rust SDK is **already built and available** - we're just working on comprehensive documentation to help you get started.
+Documentation for the Rust SDK is not yet created and is currently in progress.
 
-### Get Started Now
+## Resources
 
-While we work on the docs, you can:
-
-- **Install**: Add `alith = "0.1.0"` to your `Cargo.toml`
-- **GitHub**: [alith-ai/alith](https://github.com/alith-ai/alith) - Check the examples
-- **Discord**: [Join our community](https://discord.gg/alith) - Get help from the community
-
----
-
-**Need help?** Check out our [Python SDK](./python/) documentation or join our Discord community!
+- **GitHub**: [0xLazAI/alith](https://github.com/0xLazAI/alith)
+- **Telegram**: [Join our community](https://t.me/alithai)
